package fpt.org.inblue.model.enums;


public enum Role {
    MENTOR,ADMIN,STAFF,USER
}
