package fpt.org.inblue.security;

import jakarta.servlet.FilterChain;
import jakarta.servlet.ServletException;
import jakarta.servlet.http.HttpServletRequest;
import jakarta.servlet.http.HttpServletResponse;
import java.io.IOException;
import java.util.List;
import java.util.stream.Collectors;
import lombok.RequiredArgsConstructor;
import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
import org.springframework.security.core.authority.SimpleGrantedAuthority;
import org.springframework.security.core.context.SecurityContextHolder;
import org.springframework.stereotype.Component;
import org.springframework.web.filter.OncePerRequestFilter;

@Component
@RequiredArgsConstructor
public class JwtAuthenticationFilter extends OncePerRequestFilter {
    private final JwtUtils jwtUtils;

    @Override
    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
            throws ServletException, IOException {
        //        System.out.println("JwtAuthenticationFilter: Processing request " + request.getRequestURI());
        String path = request.getRequestURI();
        //        if (path.startsWith("/api/auth/")
        //                || path.startsWith("/swagger-ui/")
        //                || path.startsWith("/v3/api-docs")
        //                || path.startsWith("/oauth2/")
        //                || path.startsWith("/ws-chat/")
        //                || path.startsWith("/api/payments/webhook")
        //                || path.startsWith("/api/users")
        //                || path.startsWith("/api/mentors")
        //                || path.startsWith("/api/job-descriptions")
        //                || path.startsWith("/api/rounds")
        //                || path.startsWith("/api/companies")
        //                || path.startsWith("/api/posts")) {
        //            filterChain.doFilter(request, response);
        //            return;
        //        }
        String jwt = parseJwtToken(request);
        if (jwt != null && jwtUtils.validateToken(jwt)) {
            int userId = jwtUtils.getUserIdFromToken(jwt);
            String email = jwtUtils.getEmailFromToken(jwt);
            String name = jwtUtils.getNameFromToken(jwt);
            String avatarUrl = jwtUtils.getAvatarUrlFromToken(jwt);
            List<String> roles = jwtUtils.getRolesFromToken(jwt);
            List<SimpleGrantedAuthority> authorities =
                    roles.stream().map(role -> new SimpleGrantedAuthority(role)).collect(Collectors.toList());
            CustomUserDetails userDetails = new CustomUserDetails(userId, email, name, avatarUrl, authorities);
            UsernamePasswordAuthenticationToken auth =
                    new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
            auth.setDetails(userDetails);
            SecurityContextHolder.getContext().setAuthentication(auth);
        }
        //        else if (jwt == null || !jwtUtils.validateToken(jwt)) {
        //            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
        //            return;
        //        }
        filterChain.doFilter(request, response);
    }

    private String parseJwtToken(HttpServletRequest request) {
        String headerAuth = request.getHeader("Authorization");
        if (headerAuth != null && headerAuth.startsWith("Bearer ")) {
            return headerAuth.substring(7);
        }
        return null;
    }
}
